--- a/templates/map.html
+++ b/templates/map.html
@@ -36,9 +36,9 @@
 <div id="map"></div>
  <h2>Chosen Location</h2>
         <form method="post">
-            <input type="text" id="lat" readonly="yes"><br>
-            <input type="text" id="lng" readonly="yes"><br>
-            <input type="text" id="year" >
+            <input type="text" id="lat" readonly="yes" style="height: 20px;width: 102px;"><br>
+            <input type="text" id="lng" readonly="yes" style="height: 20px;width: 102px;"><br>
+            <input type="text" id="year" style="height: 20px;width: 102px;">
         </form>
         <button id="confirmPosition" onClick="sendRequest();">Send</button>
         <div> Category:</div>
