--- a/templates/map.html
+++ b/templates/map.html
@@ -125,7 +125,7 @@ function sendRequest () {
 }
 function getCategory ($i) {
     var categories = ["Accessory", "Bakery", "Bank", "Beauty Care", "Betting", "Bookstore", "Cafe", "Cargo", "Charcuterie", "Clothing", "Depot", "Eatery", "Educational", "Empty", "Florist", "Furniture Store", "Gas Station", "Hardware Store", "Health", "Home Goods", "Jeweler", "Market", "Mobile Store", "Natural Gas Station", "Office", "Pharmacy", "Photographer Store", "Shoe and Bag Store", "Spice Store", "Toy and Game Store"]
-    return categories[parseInt($i) ];
+    return categories[parseInt($i) -1 ];
 }
 
 </script>
