--- a/templates/image.html
+++ b/templates/image.html
@@ -20,19 +20,31 @@
 <!--  <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
 
   <style>
-    // Imports
+   // Imports
 //
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 // Vars and Reset
 //
-$theme:       #454cad;
-$dark-text:   #5f6982;
+$theme: #454cad;
+$dark-text: #5f6982;
 
-html,body,* { box-sizing: border-box; font-size: 16px;}
-html,body   { height: 100%; text-align: center;}
-body        { padding: 2rem; background: #f8f8f8;}
+html,
+body,
+* {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+html,
+body {
+  height: 100%;
+  text-align: center;
+}
+body {
+  padding: 2rem;
+  background: #f8f8f8;
+}
 
 h2 {
   font-family: "Roboto", sans-serif;
@@ -64,7 +76,7 @@ p {
     background: #fff;
     border-radius: 7px;
     border: 3px solid #eee;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
     user-select: none;
 
     &:hover {
@@ -93,7 +105,7 @@ p {
     i.fa {
       font-size: 50px;
       margin-bottom: 1rem;
-      transition: all .2s ease-in-out;
+      transition: all 0.2s ease-in-out;
     }
   }
   #response {
@@ -104,13 +116,13 @@ p {
       display: none;
     }
     #messages {
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
     }
   }
 
   #file-image {
     display: inline;
-    margin: 0 auto .5rem auto;
+    margin: 0 auto 0.5rem auto;
     width: auto;
     height: auto;
     max-width: 180px;
@@ -150,11 +162,11 @@ p {
   }
 
   .progress[value]::-webkit-progress-value {
-    background: linear-gradient(to right, darken($theme,8%) 0%, $theme 50%);
+    background: linear-gradient(to right, darken($theme, 8%) 0%, $theme 50%);
     border-radius: 4px;
   }
   .progress[value]::-moz-progress-bar {
-    background: linear-gradient(to right, darken($theme,8%) 0%, $theme 50%);
+    background: linear-gradient(to right, darken($theme, 8%) 0%, $theme 50%);
     border-radius: 4px;
   }
 
@@ -163,12 +175,12 @@ p {
   }
 
   div {
-    margin: 0 0 .5rem 0;
+    margin: 0 0 0.5rem 0;
     color: $dark-text;
   }
   .btn {
     display: inline-block;
-    margin: .5rem .5rem 1rem .5rem;
+    margin: 0.5rem 0.5rem 1rem 0.5rem;
     clear: both;
     font-family: inherit;
     font-weight: 700;
@@ -176,7 +188,7 @@ p {
     text-decoration: none;
     text-transform: initial;
     border: none;
-    border-radius: .2rem;
+    border-radius: 0.2rem;
     outline: none;
     padding: 0 1rem;
     height: 36px;
