--- a/templates/image.html
+++ b/templates/image.html
@@ -18,7 +18,8 @@
 <!--  <link rel="icon" href="/favicon.ico">-->
 <!--  <link rel="icon" href="/favicon.svg" type="image/svg+xml">-->
 <!--  <link rel="apple-touch-icon" href="/apple-touch-icon.png">-->
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <style>
    // Imports
 //
