--- a/templates/image.html
+++ b/templates/image.html
@@ -21,11 +21,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <style>
-// Vars and Reset
-//
-$theme: #454cad;
-$dark-text: #5f6982;
-
 html,
 body,
 * {
@@ -46,13 +41,13 @@ h2 {
   font-family: "Roboto", sans-serif;
   font-size: 26px;
   line-height: 1;
-  color: $theme;
+  color: #454cad;
   margin-bottom: 0;
 }
 p {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
-  color: $dark-text;
+  color: #5f6982;
 }
 // Upload Demo
 //
@@ -76,10 +71,10 @@ p {
     user-select: none;
 
     &:hover {
-      border-color: $theme;
+      border-color: #454cad;
     }
     &.hover {
-      border: 3px solid $theme;
+      border: 3px solid #454cad;
       box-shadow: inset 0 0 0 6px #eee;
 
       #start {
@@ -158,11 +153,11 @@ p {
   }
 
   .progress[value]::-webkit-progress-value {
-    background: linear-gradient(to right, darken($theme, 8%) 0%, $theme 50%);
+    background: linear-gradient(to right, darken(#454cad, 8%) 0%, #454cad 50%);
     border-radius: 4px;
   }
   .progress[value]::-moz-progress-bar {
-    background: linear-gradient(to right, darken($theme, 8%) 0%, $theme 50%);
+    background: linear-gradient(to right, darken(#454cad, 8%) 0%, #454cad 50%);
     border-radius: 4px;
   }
 
@@ -172,7 +167,7 @@ p {
 
   div {
     margin: 0 0 0.5rem 0;
-    color: $dark-text;
+    color: #5f6982;
   }
   .btn {
     display: inline-block;
@@ -192,8 +187,8 @@ p {
     color: #fff;
     transition: all 0.2s ease-in-out;
     box-sizing: border-box;
-    background: $theme;
-    border-color: $theme;
+    background: #454cad;
+    border-color: #454cad;
     cursor: pointer;
   }
 }
